# python-for-data-science

./: .gitignore  README.md
.agent/skills/git-smart-commit/: SKILL.md
.agent/skills/python-formatter/: SKILL.md
.agent/skills/skill-creator/: SKILL.md
0_starting/: README.md
0_starting/ex00/: Hello.py
0_starting/ex01/: format_ft_time.py
module_0_starting/: README.md
module_0_starting/ex02/: find_ft_type.py
module_0_starting/ex03/: NULL_not_found.py
module_0_starting/ex04/: whatis.py
module_0_starting/ex05/: building.py
module_0_starting/ex06/: filterstring.py  ft_filter.py
module_0_starting/ex07/: sos.py
module_0_starting/ex08/: Loading.py  tester.py
module_0_starting/ex09/: LICENSE  README.md  pyproject.toml  test.py
module_0_starting/ex09/ft_package/: __init__.py
